syntax = "proto3";
import "google/protobuf/struct.proto";

//对应 pocketbase 表： book_info
package book;
option go_package = "iting.com/book";
message Repo {
    string name = 1;
    repeated string cdnUrls = 2;
}

message Basic {
    string id = 1;
    string name = 2;
    string zhName = 3;
    string description = 4;
    string author = 5;
    string cover = 6;
    uint32 price = 7;
    
    string narrator = 10;
    string publisher = 11;
    string releaseDate = 12;//e.g 2018-01-01
    //只有音频的时候才有
    uint32 duraionSum = 13;
}

// 对应 pocketbase 表 book_info

message RespErr {
    uint32 code = 5;
    uint32 message_ = 6 [json_name = "message"];;
    google.protobuf.Struct data = 7;
}

message Group {
    string id = 1;
    string name = 2;
    ShowType showType = 3;
    repeated Basic books = 4;
    RespErr err = 5;
    enum ShowType {
      OneColumn = 0;
      TwoColumn = 1;
    }

}

message ListReq {
    uint32 page = 1;
    uint32 perPage = 2;
    string sort = 3;
    string filter = 4;
    string expand = 5;
    string fields = 6;
    string skipTotal = 7;
}

message ItemReq {
    string expand = 1;
    string fields = 2;
}
message RepoListResp {
    repeated Repo items = 1;
}

message GroupListResp {
    repeated Group items = 1;
    
    uint32 page = 2;
    uint32 perPage = 3;
    uint32 totalItems = 4;
    uint32 totalPages = 5;
} 

message BookListResp {
    repeated Basic items = 1;
    
    uint32 page = 2;
    uint32 perPage = 3;
    uint32 totalItems = 4;
    uint32 totalPages = 5;
} 


//
// 对应 pocketbase 表 book_info
//
message FileInfo {
    string ossHash = 1;
    string ossHashTrail = 2;
    //所有资源的总大小(包含音、图)
    uint32 assetsSize = 3;
}

message Model {
    //基本信息，可从列表 api 中获取
    Basic basicInfo = 1;
    FileInfo fileInfo = 2;
    repeated Toc toc = 3;
    repeated Page pages = 4;
    map<string, string> additionalInfo = 11;



    message Toc {
        //所在的页码
        uint32 pageIndex = 1;
        //有多少页,默认为1
        uint32 pageLength = 2; 
        string name = 3;
        //孩子节点
        repeated Toc children = 5;
    }
    
    message Page {
        //主要内容的地址
        //图片点读书: src="xx.jpg"，attr=[ImageAttr]
        //tingyue : src="xx.mp3",attr=[AudioAttr]
        //html    : src="xx.html",attr=[HtmlAudioAttr]
        string src = 1;
        string attr = 2;

        // for english book
        message RectAttr {
            repeated Item items = 1;

            message Item {
                message Rect {
                    float x = 1;
                    float y = 2;
                    float width = 3;
                    float height = 4;
                }
                Rect rect = 1;
                string audio = 2;
                string text = 3;
                string textTrans = 4;
            }
        }
        
        // for tingyue
        message AudioAttr {
            string whole = 1;//全文
            string timing_attr = 2;//attr=[AudioTimingAttr]
        }
        
        message AudioTimingAttr {
            repeated SRT timing = 2;//[[340,199,0,9]]
            message SRT {
                //[340,199,0,9] ms_begin,ms_len,pos_begin,pos_len
                //in seconds
                uint32 ms_begin = 1;
                uint32 ms_len = 2;
                uint32 pos_begin = 3;
                uint32 pos_len = 4;
            }
        }
        
        // for bible
        message HtmlAudioAttr {
            string audio = 1;
            string html = 2;//html全文
            repeated TagSRT timing = 3;
            message TagSRT {
                //in seconds
                uint32 start = 1;
                uint32 end = 2;
                string tag = 3;
            }
        }
    }
}
